--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,8 @@
   --color-primary-light: #aeb1ee;
   --color-primary-lightest: #d7d9f7;
 
+  --color-highlight: #ffd866;
+
   --color-gray-darkest: #2d2a2e;
   --color-gray-dark: #474557;
   --color-gray: #c7c7d3;
@@ -24,6 +26,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all 0.1s;
 }
 
 html {
@@ -34,6 +37,11 @@ body {
   font-family: filson-soft, sans-serif;
   color: var(--color-gray-darkest);
   line-height: 1;
+}
+
+::selection {
+  background-color: var(--color-highlight);
+  color: var(--color-gray-darkest);
 }
 
 a:link,
@@ -56,13 +64,16 @@ a:active {
 .heading-secondary {
   font-size: 3.6rem;
   font-weight: 300;
-  text-align: center;
+  /* text-align: center; */
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
 }
 
 .heading-tertiary {
   font-size: 2.4rem;
   font-weight: 300;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .heading-quaternary {
@@ -85,17 +96,24 @@ a:active {
 
 .section-hero {
   background-color: var(--color-primary-lightest);
-  padding: 4.8rem 0 9.6rem 0;
-  /* border-top: 2rem solid var(--color-gray-darkest); */
+  padding: 4.8rem 3.6rem 9.6rem 3.6rem;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.section-hero--even-padding {
+  padding-bottom: 4.8rem;
+}
+
 .hero-paragraph {
   font-size: 3rem;
-  margin-bottom: 4.8rem;
+}
+
+.hero-paragraph--small {
+  font-size: 2.4rem;
+  margin-top: 1.6rem;
 }
 
 .portraits {
@@ -173,6 +191,10 @@ a:active {
   z-index: 1;
 }
 
+.vis-container .answers-paragraph {
+  flex: 40;
+}
+
 .lists {
   flex: 40;
 
@@ -220,6 +242,24 @@ a:active {
   text-align: center;
 }
 
+.assignments-list {
+  font-weight: 300;
+  font-size: 1.6rem;
+  line-height: 1.4;
+  list-style: inside;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.assignments-list__item {
+  margin-left: 2.4rem;
+  padding-left: 2rem;
+  text-indent: -5rem;
+  font-size: 1.6rem;
+}
+
 /*****************************************/
 /****  HELPERS  ****/
 /*****************************************/
@@ -229,6 +269,32 @@ a:active {
 
 .margin-bottom-md {
   margin-bottom: 4.8rem !important;
+}
+
+/*****************************************/
+/****  ASSIGNMENT 2  ****/
+/*****************************************/
+.assignment-2 .answers-container {
+  gap: 4.8rem;
+}
+
+.common-list {
+  font-weight: 300;
+  font-size: 1.6rem;
+  line-height: 1.4;
+  list-style: inside;
+  margin-top: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.common-list__item {
+  margin-left: 2.4rem;
+  padding-left: 2rem;
+  text-indent: -5rem;
+  font-size: 1.6rem;
 }
 
 /*****************************************/
@@ -242,5 +308,46 @@ a:active {
 
   .heading-quaternary {
     font-size: 3.6rem;
+  }
+}
+
+@media only screen and (max-width: 525px) {
+  .answers-container {
+    gap: 4.8rem;
+  }
+}
+
+@media only screen and (max-width: 475px) {
+  .heading-primary {
+    font-size: 3.2rem;
+  }
+
+  .hero-paragraph {
+    font-size: 2.4rem;
+  }
+
+  .heading-secondary {
+    font-size: 2.4rem;
+  }
+
+  .heading-tertiary {
+    font-size: 2rem;
+  }
+
+  .heading-quaternary {
+    font-size: 2rem;
+  }
+
+  .margin-bottom-md {
+    margin-bottom: 3rem!important;
+  }
+
+  .lists {
+    gap: 1rem;
+  }
+
+  .common-list__item {
+    padding-left: 1rem;
+    text-indent: -4rem;
   }
 }
